--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
-  <body class="bg-gradient-to-b from-slate-900 to-black h-[100vh]">
+  <body class="text-white ">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
