meta tags update

--- a/index.html
+++ b/index.html
@@ -1,9 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- HTML Meta Tags -->
+    <title>Shubham Yelekar | Front End Developer</title>
     <meta charset="UTF-8" />
+
+    <meta name="description" content="" />
+
+    <!-- Google / Search Engine Tags -->
+    <meta itemprop="name" content="Shubham Yelekar | Front End Developer" />
+    <meta
+      itemprop="description"
+      content="Hey, I’m Shubham Yelekar, a Front-end engineer who enjoys designing and coding."
+    />
+    <meta
+      itemprop="image"
+      content="https://ucarecdn.com/961683ce-ba5f-4a9d-809b-76a5fb34964f/-/preview/450x300/"
+    />
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://shubhamyelekar.vercel.app/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Shubham Yelekar | Front End Developer" />
+    <meta
+      property="og:description"
+      content="Hey, I’m Shubham Yelekar, a Front-end engineer who enjoys designing and coding."
+    />
+    <meta
+      property="og:image"
+      content="https://ucarecdn.com/961683ce-ba5f-4a9d-809b-76a5fb34964f/-/preview/450x300/"
+    />
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Shubham Yelekar | Front End Developer"
+    />
+    <meta
+      name="twitter:description"
+      content="Hey, I’m Shubham Yelekar, a Front-end engineer who enjoys designing and coding."
+    />
+    <meta
+      name="twitter:image"
+      content="https://ucarecdn.com/961683ce-ba5f-4a9d-809b-76a5fb34964f/-/preview/450x300/"
+    />
+
+    <!-- Meta Tags Generated via https://heymeta.com -->
     <link rel="icon" type="image" href="/public/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -28,7 +74,6 @@
 
       gtag("config", "G-F001YQ23N7");
     </script>
-    <title>Shubham Yelekar | Front End Developer</title>
   </head>
   <body>
     <div id="root"></div>
